src/test/ui/deprecation/deprecated_no_stack_check.stderr
error[E0557]: feature has been removed
  --> $DIR/deprecated_no_stack_check.rs:12:12
   |
LL | #![feature(no_stack_check)]
   |            ^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0557`.
