src/test/ui/deprecation/deprecated_no_stack_check.rs
#![deny(warnings)]
#![feature(no_stack_check)]
//~^ ERROR: feature has been removed [E0557]
fn main() {

}
